Add buttons for arithmetic operations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
+    <div class="calculator">
+        <div class="buttons">
+            <button class="add">
+            Add
+            </button>
+            <button class="subtract">
+            Subtract      
+            </button>
+            <button class="multiply">   
+            Multiply
+            </button>
+            <button class="divide">
+            Divide                
+            </button>
+            <button class="equals">
+            Equals
+            </button>
+            <button class="clear">
+            Clear            
+            </div>
+        </div>
     
 </body>
 </html>
