--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <div class="buttons">
             <button class="clear">C</button>
+            <button class="delete">del</button>
             <button class="operation" id="equals">=</button>
             <button class="digit">7</button>
             <button class="digit">8</button>
