--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             
         </div>
     </div>
-    <script src="./main.js" defer></script>
+    <script src="./chat.js" defer></script>
 </body>
 </html>
